@@ -107,32 +107,32 @@ sub readNames
 
 sub printMacros
 {
-    my ($macro, $suffix, @names) = @_;
+    my ($F, $macro, $suffix, @names) = @_;
     for my $name (@names) {
-        print "    $macro $name","$suffix;\n";
+        print F "    $macro $name","$suffix;\n";
     }
 }
 
 sub printConstructors
 {
-    my @names = @_;
-    print "#if ENABLE(SVG)\n";
+    my ($F, @names) = @_;
+    print F "#if ENABLE(SVG)\n";
     for my $name (@names) {
         my $upperCase = upperCaseName($name);
     
-        print "${namespace}Element *${name}Constructor(Document *doc, bool createdByParser)\n";
-        print "{\n";
-        print "    return new ${namespace}${upperCase}Element(${name}Tag, doc);\n";
-        print "}\n\n";
+        print F "${namespace}Element *${name}Constructor(Document *doc, bool createdByParser)\n";
+        print F "{\n";
+        print F "    return new ${namespace}${upperCase}Element(${name}Tag, doc);\n";
+        print F "}\n\n";
     }
-    print "#endif\n";
+    print F "#endif\n";
 }
 
 sub printFunctionInits
 {
-    my @names = @_;
+    my ($F, @names) = @_;
     for my $name (@names) {
-        print "    gFunctionMap->set(${name}Tag.localName().impl(), ${name}Constructor);\n";
+        print F "    gFunctionMap->set(${name}Tag.localName().impl(), ${name}Constructor);\n";
     }
 }
 
@@ -168,7 +168,8 @@ sub upperCaseName
 
 sub printLicenseHeader
 {
-    print "/*
+    my $F = shift;
+    print F "/*
  * THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT.
  *
  *
@@ -202,62 +203,64 @@ sub printLicenseHeader
 
 sub printNamesHeaderFile
 {
-    my $headerPath = shift;
-    redirectSTDOUT($headerPath);
+    my ($headerPath) = shift;
+    my $F;
+    open F, ">$headerPath";
     
-    printLicenseHeader();
-    print "#ifndef DOM_${namespace}NAMES_H\n";
-    print "#define DOM_${namespace}NAMES_H\n\n";
-    print "#include \"QualifiedName.h\"\n\n";
+    printLicenseHeader($F);
+    print F "#ifndef DOM_${namespace}NAMES_H\n";
+    print F "#define DOM_${namespace}NAMES_H\n\n";
+    print F "#include \"QualifiedName.h\"\n\n";
     
-    print "namespace $cppNamespace { namespace ${namespace}Names {\n\n";
+    print F "namespace $cppNamespace { namespace ${namespace}Names {\n\n";
     
     my $lowerNamespace = lc($namespacePrefix);
-    print "#ifndef DOM_${namespace}NAMES_HIDE_GLOBALS\n";
-    print "// Namespace\n";
-    print "extern const WebCore::AtomicString ${lowerNamespace}NamespaceURI;\n\n";
+    print F "#ifndef DOM_${namespace}NAMES_HIDE_GLOBALS\n";
+    print F "// Namespace\n";
+    print F "extern const WebCore::AtomicString ${lowerNamespace}NamespaceURI;\n\n";
 
     if (scalar(@tags)) {
-        print "// Tags\n";
-        printMacros("extern const WebCore::QualifiedName", "Tag", @tags);
-        print "\n\nWebCore::QualifiedName** get${namespace}Tags(size_t* size);\n";
+        print F "// Tags\n";
+        printMacros($F, "extern const WebCore::QualifiedName", "Tag", @tags);
+        print F "\n\nWebCore::QualifiedName** get${namespace}Tags(size_t* size);\n";
     }
     
     if (scalar(@attrs)) {
-        print "// Attributes\n";
-        printMacros("extern const WebCore::QualifiedName", "Attr", @attrs);
-        print "\n\nWebCore::QualifiedName** get${namespace}Attr(size_t* size);\n";
+        print F "// Attributes\n";
+        printMacros($F, "extern const WebCore::QualifiedName", "Attr", @attrs);
+        print F "\n\nWebCore::QualifiedName** get${namespace}Attr(size_t* size);\n";
     }
-    print "#endif\n\n";
-    print "void init();\n\n";
-    print "} }\n\n";
-    print "#endif\n\n";
+    print F "#endif\n\n";
+    print F "void init();\n\n";
+    print F "} }\n\n";
+    print F "#endif\n\n";
     
-    restoreSTDOUT();
+    close F;
 }
 
 sub printNamesCppFile
 {
     my $cppPath = shift;
-    redirectSTDOUT($cppPath);
+    my $F;
+    open F, ">$cppPath";
     
-    printLicenseHeader();
+    printLicenseHeader($F);
     
     my $lowerNamespace = lc($namespacePrefix);
 
-print "#include \"config.h\"\n";
+print F "#include \"config.h\"\n";
 
-print "#ifdef AVOID_STATIC_CONSTRUCTORS\n";
-print "#define DOM_${namespace}NAMES_HIDE_GLOBALS 1\n";
-print "#else\n";
-print "#define QNAME_DEFAULT_CONSTRUCTOR 1\n";
-print "#endif\n\n";
+print F "#ifdef AVOID_STATIC_CONSTRUCTORS\n";
+print F "#define DOM_${namespace}NAMES_HIDE_GLOBALS 1\n";
+print F "#else\n";
+print F "#define QNAME_DEFAULT_CONSTRUCTOR 1\n";
+print F "#endif\n\n";
 
 
-print "#include \"${namespace}Names.h\"\n\n";
-print "#include \"StaticConstructors.h\"\n";
+print F "#include \"${namespace}Names.h\"\n\n";
+print F "#include \"StaticConstructors.h\"\n";
 
-print "namespace $cppNamespace { namespace ${namespace}Names {
+print F "namespace $cppNamespace { namespace ${namespace}Names {
 
 using namespace WebCore;
 
@@ -265,40 +268,40 @@ DEFINE_GLOBAL(AtomicString, ${lowerNamespace}NamespaceURI, \"$namespaceURI\")
 ";
 
     if (scalar(@tags)) {
-        print "// Tags\n";
+        print F "// Tags\n";
         for my $name (@tags) {
-            print "DEFINE_GLOBAL(QualifiedName, ", $name, "Tag, nullAtom, \"$name\", ${lowerNamespace}NamespaceURI);\n";
+            print F "DEFINE_GLOBAL(QualifiedName, ", $name, "Tag, nullAtom, \"$name\", ${lowerNamespace}NamespaceURI);\n";
         }
         
-        print "\n\nWebCore::QualifiedName** get${namespace}Tags(size_t* size)\n";
-        print "{\n    static WebCore::QualifiedName* ${namespace}Tags[] = {\n";
+        print F "\n\nWebCore::QualifiedName** get${namespace}Tags(size_t* size)\n";
+        print F "{\n    static WebCore::QualifiedName* ${namespace}Tags[] = {\n";
         for my $name (@tags) {
-            print "        (WebCore::QualifiedName*)&${name}Tag,\n";
+            print F "        (WebCore::QualifiedName*)&${name}Tag,\n";
         }
-        print "    };\n";
-        print "    *size = ", scalar(@tags), ";\n";
-        print "    return ${namespace}Tags;\n";
-        print "}\n";
+        print F "    };\n";
+        print F "    *size = ", scalar(@tags), ";\n";
+        print F "    return ${namespace}Tags;\n";
+        print F "}\n";
         
     }
 
     if (scalar(@attrs)) {
-        print "\n// Attributes\n";
+        print F "\n// Attributes\n";
         for my $name (@attrs) {
-            print "DEFINE_GLOBAL(QualifiedName, ", $name, "Attr, nullAtom, \"$name\", ${lowerNamespace}NamespaceURI);\n";
+            print F "DEFINE_GLOBAL(QualifiedName, ", $name, "Attr, nullAtom, \"$name\", ${lowerNamespace}NamespaceURI);\n";
         }
-        print "\n\nWebCore::QualifiedName** get${namespace}Attrs(size_t* size)\n";
-        print "{\n    static WebCore::QualifiedName* ${namespace}Attr[] = {\n";
+        print F "\n\nWebCore::QualifiedName** get${namespace}Attrs(size_t* size)\n";
+        print F "{\n    static WebCore::QualifiedName* ${namespace}Attr[] = {\n";
         for my $name (@attrs) {
-            print "        (WebCore::QualifiedName*)&${name}Attr,\n";
+            print F "        (WebCore::QualifiedName*)&${name}Attr,\n";
         }
-        print "    };\n";
-        print "    *size = ", scalar(@attrs), ";\n";
-        print "    return ${namespace}Attr;\n";
-        print "}\n";
+        print F "    };\n";
+        print F "    *size = ", scalar(@attrs), ";\n";
+        print F "    return ${namespace}Attr;\n";
+        print F "}\n";
     }
 
-print "\nvoid init()
+print F "\nvoid init()
 {
     static bool initialized = false;
     if (initialized)
@@ -310,84 +313,70 @@ print "\nvoid init()
     AtomicString::init();
 ";
     
-    print("    AtomicString ${lowerNamespace}NS(\"$namespaceURI\");\n\n");
+    print(F "    AtomicString ${lowerNamespace}NS(\"$namespaceURI\");\n\n");
 
-    print("    // Namespace\n");
-    print("    new ((void*)&${lowerNamespace}NamespaceURI) AtomicString(${lowerNamespace}NS);\n\n");
+    print(F "    // Namespace\n");
+    print(F "    new ((void*)&${lowerNamespace}NamespaceURI) AtomicString(${lowerNamespace}NS);\n\n");
     if (scalar(@tags)) {
         my $tagsNamespace = $tagsNullNamespace ? "nullAtom" : "${lowerNamespace}NS";
-        printDefinitions(\@tags, "tags", $tagsNamespace);
+        printDefinitions($F, \@tags, "tags", $tagsNamespace);
     }
     if (scalar(@attrs)) {
         my $attrsNamespace = $attrsNullNamespace ? "nullAtom" : "${lowerNamespace}NS";
-        printDefinitions(\@attrs, "attributes", $attrsNamespace);
+        printDefinitions($F, \@attrs, "attributes", $attrsNamespace);
     }
 
-    print "}\n\n} }\n\n";
-    restoreSTDOUT();
+    print F "}\n\n} }\n\n";
+    close F;
 }
 
 sub printElementIncludes
 {
-    my @names = @_;
+    my ($F, @names) = @_;
     for my $name (@names) {
         my $upperCase = upperCaseName($name);
-        print "#include \"${namespace}${upperCase}Element.h\"\n";
+        print F "#include \"${namespace}${upperCase}Element.h\"\n";
     }
 }
 
 sub printDefinitions
 {
-    my ($namesRef, $type, $namespaceURI) = @_;
+    my ($F, $namesRef, $type, $namespaceURI) = @_;
     my $singularType = substr($type, 0, -1);
     my $shortType = substr($singularType, 0, 4);
     my $shortCamelType = ucfirst($shortType);
     my $shortUpperType = uc($shortType);
     
-    print "    // " . ucfirst($type) . "\n";
+    print F "    // " . ucfirst($type) . "\n";
 
     for my $name (@$namesRef) {
-        print "    const char *$name","${shortCamelType}String = \"$name\";\n";
+        print F "    const char *$name","${shortCamelType}String = \"$name\";\n";
     }
         
     for my $name (@$namesRef) {
         if ($name =~ /_/) {
             my $realName = $name;
             $realName =~ s/_/-/g;
-            print "    ${name}${shortCamelType}String = \"$realName\";\n";
+            print F "    ${name}${shortCamelType}String = \"$realName\";\n";
         }
     }
-    print "\n";
+    print F "\n";
 
     for my $name (@$namesRef) {
-        print "    new ((void*)&$name","${shortCamelType}) QualifiedName(nullAtom, $name","${shortCamelType}String, $namespaceURI);\n";
+        print F "    new ((void*)&$name","${shortCamelType}) QualifiedName(nullAtom, $name","${shortCamelType}String, $namespaceURI);\n";
     }
 
-}
-
-my $savedSTDOUT;
-
-sub redirectSTDOUT
-{
-    my $filepath = shift;
-    print "Writing $filepath...\n";
-    open $savedSTDOUT, ">&STDOUT" or die "Can't save STDOUT";
-    open(STDOUT, ">", $filepath) or die "Failed to open file: $filepath";
-}
-
-sub restoreSTDOUT
-{
-    open STDOUT, ">&", $savedSTDOUT or die "Can't restor STDOUT: \$oldout: $!";
 }
 
 sub printFactoryCppFile
 {
     my $cppPath = shift;
-    redirectSTDOUT($cppPath);
+    my $F;
+    open F, ">$cppPath";
 
-printLicenseHeader();
+printLicenseHeader($F);
 
-print <<END
+print F <<END
 #include "config.h"
 #include "${namespace}ElementFactory.h"
 #include "${namespace}Names.h"
@@ -396,9 +385,9 @@ print <<END
 END
 ;
 
-printElementIncludes(@tags);
+printElementIncludes($F, @tags);
 
-print <<END
+print F <<END
 #include <wtf/HashMap.h>
 
 using namespace WebCore;
@@ -414,9 +403,9 @@ namespace ${cppNamespace} {
 END
 ;
 
-printConstructors(@tags);
+printConstructors($F, @tags);
 
-print <<END
+print F <<END
 #if ENABLE(SVG)
 static inline void createFunctionMapIfNecessary()
 {
@@ -429,9 +418,9 @@ static inline void createFunctionMapIfNecessary()
 END
 ;
 
-printFunctionInits(@tags);
+printFunctionInits($F, @tags);
 
-print <<END
+print F <<END
 }
 #endif
 
@@ -462,20 +451,21 @@ ${namespace}Element *${namespace}ElementFactory::create${namespace}Element(const
 END
 ;
 
-    restoreSTDOUT();
+    close F;
 }
 
 sub printFactoryHeaderFile
 {
     my $headerPath = shift;
-    redirectSTDOUT($headerPath);
+    my $F;
+    open F, ">$headerPath";
 
-    printLicenseHeader();
+    printLicenseHeader($F);
 
-print "#ifndef ${namespace}ELEMENTFACTORY_H\n";
-print "#define ${namespace}ELEMENTFACTORY_H\n\n";
+print F "#ifndef ${namespace}ELEMENTFACTORY_H\n";
+print F "#define ${namespace}ELEMENTFACTORY_H\n\n";
 
-print "
+print F "
 namespace WebCore {
     class Element;
     class Document;
@@ -501,5 +491,5 @@ namespace ${cppNamespace}
 
 ";
 
-    restoreSTDOUT();
+    close F;
 }
